Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
     <div class="card">
-        <img src="https://cdn-icons-png.flaticon.com/512/1156/1156949.png" alt="Star">
+        <img src="./silly_ham.jpg" alt="Star">
         <h1>Сегодня ты сделаешь шаг, который приблизит тебя к большой цели.</h1>
     </div>
 
